2008-08-04  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Romanian leadership changed.
	Khoem Sokhem has an account now.

2008-08-04  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	epiphany-extensions branched for GNOME 2.24.

2008-08-01  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Crimean Tatar team began translation.

2008-08-01  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Track trunk branch of Gimp.

2008-07-31  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: updated Sandeep's id (mr team).

2008-07-31  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Marathi coordinator changed.

2008-07-29  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: devhelp will use gnome-2-22 branch for 2.24.

2008-07-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added doc reference for gnome-commander.

2008-07-25  Gil Forcada  <gforcada@gnome.org>

	* index.py:
	* people.py:
	* dispatcher.py:
	* releases.py
	* teams.py:
	Updated all shebangs to the most common one to ensure python is always
	found.

2008-07-25  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Fixed some miss spellings found by Asgeir
	Frimannsson.
	* releases.xml.in: Fixed pessulus name, and commented some non-working
	modules.

2008-07-25  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed xkeyboard-config definition.
	* modules.py: Added -f switch to 'git clean' (need either -f or -n).

2008-07-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added hotssh module.

2008-07-23  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Removed link for PL team Web page, as
	requested by Wadim Dziedzic.

2008-07-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: epiphany branched for 2.24.
