@@ -759,7 +759,8 @@
   </module>
 
   <module id="gnome-backgrounds">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
 
   <module id="gnome-blog">
