@@ -55,7 +55,7 @@
       <module id="gdm" branch="gnome-2-14"/>
       <module id="gedit" branch="gnome-2-14"/>
       <module id="gnome-applets" branch="gnome-2-14"/>
-      <module id="gnome-backgrounds"/>
+      <module id="gnome-backgrounds" branch="gnome-2-22"/>
       <module id="gnome-control-center" branch="gnome-2-14"/>
       <module id="gnome-desktop" branch="gnome-2-14"/>
       <module id="gnome-doc-utils" branch="gnome-2-14"/>
@@ -315,7 +315,7 @@
       <module id="gdm" branch="gnome-2-16"/>
       <module id="gedit" branch="gnome-2-16"/>
       <module id="gnome-applets" branch="gnome-2-16"/>
-      <module id="gnome-backgrounds"/>
+      <module id="gnome-backgrounds" branch="gnome-2-22"/>
       <module id="gnome-control-center" branch="gnome-2-16"/>
       <module id="gnome-desktop" branch="gnome-2-16"/>
       <module id="gnome-doc-utils" branch="gnome-2-16"/>
@@ -403,7 +403,7 @@
       <module id="gdm" branch="gnome-2-18"/>
       <module id="gedit" branch="gnome-2-18"/>
       <module id="gnome-applets" branch="gnome-2-18"/>
-      <module id="gnome-backgrounds"/>
+      <module id="gnome-backgrounds" branch="gnome-2-22"/>
       <module id="gnome-control-center" branch="gnome-2-18"/>
       <module id="gnome-desktop" branch="gnome-2-18"/>
       <module id="gnome-doc-utils" branch="gnome-2-18"/>
@@ -505,7 +505,7 @@
       <module id="gdm" branch="gnome-2-20"/>
       <module id="gedit" branch="gnome-2-20"/>
       <module id="gnome-applets" branch="gnome-2-20"/>
-      <module id="gnome-backgrounds"/>
+      <module id="gnome-backgrounds" branch="gnome-2-22"/>
       <module id="gnome-control-center" branch="gnome-2-20"/>
       <module id="gnome-desktop" branch="gnome-2-20"/>
       <module id="gnome-doc-utils"/>
@@ -610,7 +610,7 @@
       <module id="gdm" branch="gnome-2-20"/>
       <module id="gedit" branch="gnome-2-22"/>
       <module id="gnome-applets" branch="gnome-2-22"/>
-      <module id="gnome-backgrounds"/>
+      <module id="gnome-backgrounds" branch="gnome-2-22"/>
       <module id="gnome-control-center" branch="gnome-2-22"/>
       <module id="gnome-desktop" branch="gnome-2-22"/>
       <module id="gnome-doc-utils"/>
