@@ -1,3 +1,9 @@
+2008-08-05  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	gnome-backgrounds branched for GNOME 2.22.
+
 2008-08-04  Claude Paroz  <claude@2xlibre.net>
 
 	* people.xml.in:
